<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        app:srcCompat="@drawable/birthdaycake"
        android:contentDescription="@string/listview_row_todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameTextViewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/buttonfont"
            android:text="@string/textview"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/infoTextViewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listview_row_TextView"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>